Fixed CSS alignment of search bars and search buttons.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@ h2, h3{
 
 input{
 	border: none;
-	height: 40px;
+	height: 42px;
 	background-color: #d9d9d9;
 	width: 300px;
 	padding-left: 10px;
@@ -49,7 +49,6 @@ button{
 	font-size: 20px;
 	line-height: 22px;
 	width: 80px;
-	padding-bottom: 2px;
 	background-color: #c94c0f;
 	color: #fff;
 }
@@ -101,7 +100,7 @@ a:hover{
 }
 .sContainer input{
 	border: none;
-	height: 30px;
+	height: 32px;
 	background-color: #d9d9d9;
 	width: 200px;
 	padding-left: 10px;
@@ -115,7 +114,6 @@ a:hover{
 	font-size: 20px;
 	line-height: 22px;
 	width: 60px;
-	padding-bottom: 2px;
 	background-color: #c94c0f;
 	color: #fff;
 }
